--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-  <h1> hello </h1><br>
+  <h1><center>BUSINESS ON BOT</center></h1>
+  <h3>CASE 1: <a href = "https://bob-backend-fetch-details.vercel.app/api/search?q=Mumbai&limit=2&offset=1"></h3>
+  <h3>CASE 2: <a href = "https://bob-bank.vercel.app/api/branch?q=LONI&limit=1&offset=1"></h3>
    
 </html>
