--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
+  <body background-color="#ACDDDE">
   <h1><center>BUSINESS ON BOT</center></h1>
   <h2><center>TASK - BACKEND</center></h2>
   <h3>CASE 1: <a href = "https://bob-backend-fetch-details.vercel.app/api/search?q=Mumbai&limit=2&offset=1">click here</a></h3>
   <h3>CASE 2: <a href = "https://bob-bank.vercel.app/api/branch?q=LONI&limit=1&offset=1">click here</a></h3>
-   
+  </body>
 </html>
