--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body background-color="#ACDDDE">
+  <body style="background-color:#ACDDDE">
   <h1><center>BUSINESS ON BOT</center></h1>
   <h2><center>TASK - BACKEND</center></h2>
   <h3>CASE 1: <a href = "https://bob-backend-fetch-details.vercel.app/api/search?q=Mumbai&limit=2&offset=1">click here</a></h3>
